--- a/FrontEnd_Master/JSX_Method/package.json
+++ b/FrontEnd_Master/JSX_Method/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sumit",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  }
 }
