--- a/FrontEnd_Master/JSX_Method/package.json
+++ b/FrontEnd_Master/JSX_Method/package.json
@@ -11,7 +11,9 @@
   "author": "sumit",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "vite": "^4.4.9"
   }
 }
