--- a/FrontEnd_Master/JSX_Method/package.json
+++ b/FrontEnd_Master/JSX_Method/package.json
@@ -4,6 +4,9 @@
   "description": "Jsx method react app",
   "main": "index.js",
   "scripts": {
+    "dev":"vite",
+    "build":"vite build",
+    "preview":"vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +18,9 @@
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
     "vite": "^4.4.9"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
