--- a/FrontEnd_Master/JSX_Method/.eslintrc.json
+++ b/FrontEnd_Master/JSX_Method/.eslintrc.json
@@ -5,7 +5,7 @@
     ],
     "plugins": [],
     "parserOptions": {
-        "ecmaVersion":"latest",
+        "ecmaVersion":2023,
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true
